[gd_scene load_steps=26 format=3 uid="uid://b13uvvo3pvlly"]

[ext_resource type="Texture2D" uid="uid://d1qhw7lk8kewq" path="res://Player/Sprite/Torso.png" id="1_b0p23"]
[ext_resource type="Script" path="res://Player/Sprite/player_sprite.gd" id="1_wd3ho"]
[ext_resource type="Texture2D" uid="uid://c0l85fl55e84p" path="res://Player/Sprite/Torso Light.png" id="2_46iea"]
[ext_resource type="Texture2D" uid="uid://balk1ef8yaahl" path="res://Player/Sprite/Left Hand.png" id="3_at3nv"]
[ext_resource type="Texture2D" uid="uid://cqql4t8gipxdy" path="res://Player/Sprite/Left Forearm.png" id="4_a6v1j"]
[ext_resource type="Texture2D" uid="uid://dpicbpqmf8jjb" path="res://Player/Sprite/Left Arm.png" id="5_iqic5"]
[ext_resource type="Texture2D" uid="uid://b6cd21pswxxy2" path="res://Player/Sprite/Left Forearm Light.png" id="6_uh560"]
[ext_resource type="Texture2D" uid="uid://beqjiqgvpgf6b" path="res://Player/Sprite/Left Arm Light.png" id="7_gfokl"]
[ext_resource type="Texture2D" uid="uid://dr67l8lyblpd7" path="res://Player/Sprite/Gun.png" id="8_bp4oq"]
[ext_resource type="Texture2D" uid="uid://bta3dt5cdqgpv" path="res://Player/Sprite/Gun Circle Light.png" id="9_f08rc"]
[ext_resource type="Texture2D" uid="uid://beb44mpkdfkil" path="res://Player/Sprite/Gun Light 1.png" id="10_kdgdf"]
[ext_resource type="Texture2D" uid="uid://bcrl4ihgrcv6r" path="res://Player/Sprite/Gun Light 2.png" id="11_imq1r"]
[ext_resource type="Texture2D" uid="uid://skl34k6mc6w" path="res://Player/Sprite/Gun Light 3.png" id="12_7epgl"]
[ext_resource type="Texture2D" uid="uid://kpqlod8xt1ii" path="res://Player/Sprite/Right Arm.png" id="13_gyih6"]
[ext_resource type="Texture2D" uid="uid://byu82a5bd4f4f" path="res://Player/Sprite/Right Forearm Light.png" id="14_qesk8"]
[ext_resource type="Texture2D" uid="uid://cigtid4wswlco" path="res://Player/Sprite/Left Shoulder.png" id="15_n8v7k"]
[ext_resource type="Texture2D" uid="uid://4dxunbip311w" path="res://Player/Sprite/Left Shoulder Light.png" id="16_iv4sp"]
[ext_resource type="Texture2D" uid="uid://cmwdc7ql835u0" path="res://Player/Sprite/Right Shoulder.png" id="17_op3cn"]
[ext_resource type="Texture2D" uid="uid://c253mfy8iiewd" path="res://Player/Sprite/Right Shoulder Light.png" id="18_3x4h8"]
[ext_resource type="Texture2D" uid="uid://c1um7m7mwmaog" path="res://Player/Sprite/Head.png" id="19_1w3kn"]
[ext_resource type="Texture2D" uid="uid://drferx8s8d62k" path="res://Player/Sprite/Head Light.png" id="20_61sla"]

[sub_resource type="Animation" id="Animation_c2je3"]
resource_name = "Player_Move"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5, 0.733333, 1, 1.23333, 1.5, 1.73333, 2, 2.23333, 2.5, 2.73333, 3, 3.23333, 3.5, 3.73333, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.10472, 0.0, 0.10472, 0.0, -0.10472, 0.0, 0.10472, 0.0, -0.10472, 0.0, 0.10472, 0.0, -0.10472, 0.0, 0.10472, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.33333, 2.66667, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.471239, 0.471239, 0.0]
}

[sub_resource type="Animation" id="Animation_jt0vj"]
resource_name = "Player_Shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso/Gun:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.95), Vector2(1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Torso:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Torso/Gun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.4),
"transitions": PackedFloat32Array(1, 0.353553, 1),
"update": 0,
"values": [Vector2(21.5, -3.25), Vector2(24.0001, 7.99992), Vector2(21.5, -3.25)]
}

[sub_resource type="Animation" id="Animation_xdsy5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Torso:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Torso/Gun:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Torso/Gun:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(21.5, -3.25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b1y51"]
_data = {
"Player_Move": SubResource("Animation_c2je3"),
"Player_Shoot": SubResource("Animation_jt0vj"),
"RESET": SubResource("Animation_xdsy5")
}

[node name="PlayerSprite" type="Sprite2D"]
rotation = 1.5708
script = ExtResource("1_wd3ho")

[node name="Torso" type="Sprite2D" parent="."]
position = Vector2(0, 13)
texture = ExtResource("1_b0p23")

[node name="TorsoLight" type="Sprite2D" parent="Torso"]
position = Vector2(0, 10)
texture = ExtResource("2_46iea")

[node name="LeftForearm" type="Sprite2D" parent="Torso"]
position = Vector2(-5.00003, -21)
rotation = 0.102974
texture = ExtResource("4_a6v1j")

[node name="LeftArm" type="Sprite2D" parent="Torso/LeftForearm"]
position = Vector2(-15, 10)
texture = ExtResource("5_iqic5")

[node name="LeftForearmLight" type="Sprite2D" parent="Torso/LeftForearm/LeftArm"]
position = Vector2(8, -7)
texture = ExtResource("6_uh560")

[node name="LeftArmLight" type="Sprite2D" parent="Torso/LeftForearm/LeftArm"]
position = Vector2(0, -1)
texture = ExtResource("7_gfokl")

[node name="LeftHand" type="Sprite2D" parent="Torso/LeftForearm/LeftArm"]
position = Vector2(30.5041, -15.6235)
rotation = 0.176278
texture = ExtResource("3_at3nv")

[node name="Gun" type="Sprite2D" parent="Torso"]
z_index = 1
position = Vector2(21.5, -3.25)
rotation = 0.226893
texture = ExtResource("8_bp4oq")
offset = Vector2(-10.5805, -39.6005)

[node name="GunCircleLight" type="Sprite2D" parent="Torso/Gun"]
position = Vector2(-4.92565, -23.1585)
rotation = -0.102502
texture = ExtResource("9_f08rc")
offset = Vector2(-4, -16)

[node name="GunLight1" type="Sprite2D" parent="Torso/Gun"]
position = Vector2(-5.14214, -22.8405)
rotation = -0.0545926
texture = ExtResource("10_kdgdf")
offset = Vector2(-8, -32)

[node name="GunLight2" type="Sprite2D" parent="Torso/Gun"]
position = Vector2(-5.00389, -24.8357)
rotation = -0.0708309
texture = ExtResource("11_imq1r")
offset = Vector2(-7, -26)

[node name="GunLight3" type="Sprite2D" parent="Torso/Gun"]
position = Vector2(-5.14214, -22.8405)
rotation = -0.0644556
texture = ExtResource("12_7epgl")
offset = Vector2(-6, -24)

[node name="RightArm" type="Sprite2D" parent="Torso"]
position = Vector2(21.1188, -17.7175)
rotation = 0.290146
scale = Vector2(1, 1)
texture = ExtResource("13_gyih6")

[node name="RightForearmLight" type="Sprite2D" parent="Torso"]
position = Vector2(21.1187, -17.7175)
rotation = 0.290146
scale = Vector2(1, 1)
texture = ExtResource("14_qesk8")

[node name="LeftShoulder" type="Sprite2D" parent="Torso"]
position = Vector2(-24, -1)
texture = ExtResource("15_n8v7k")

[node name="LeftShoulderLight" type="Sprite2D" parent="Torso/LeftShoulder"]
texture = ExtResource("16_iv4sp")

[node name="RightShoulder" type="Sprite2D" parent="Torso"]
position = Vector2(24, -1)
texture = ExtResource("17_op3cn")
offset = Vector2(0.685, 0)

[node name="RightShoulderLight" type="Sprite2D" parent="Torso/RightShoulder"]
texture = ExtResource("18_3x4h8")

[node name="Head" type="Sprite2D" parent="."]
texture = ExtResource("19_1w3kn")

[node name="HeadLight" type="Sprite2D" parent="Head"]
texture = ExtResource("20_61sla")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b1y51")
}
